# io

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vix.json
examples/: read_write.cpp
include/rix/io/: buffer.hpp  file.hpp  reader.hpp  util.hpp  writer.hpp
src/: file.cpp
tests/: file_test.cpp  test_basic.cpp
